--- a/RobudeidLib/RobudeidLib.vcxproj
+++ b/RobudeidLib/RobudeidLib.vcxproj
@@ -85,6 +85,8 @@
       </ModuleDefinitionFile>
       <ImportLibrary>lib\$(Configuration)\$(TargetName).lib</ImportLibrary>
       <RandomizedBaseAddress>true</RandomizedBaseAddress>
+      <SubSystem>
+      </SubSystem>
     </Link>
     <Lib>
       <AdditionalDependencies>Blas.lib;LibLinear.lib;opencv_calib3d246.lib;opencv_core246.lib;opencv_features2d246.lib;opencv_flann246.lib;opencv_gpu246.lib;opencv_highgui246.lib;opencv_imgproc246.lib;opencv_legacy246.lib;opencv_ml246.lib;opencv_nonfree246.lib;opencv_objdetect246.lib;opencv_video246.lib;%(AdditionalDependencies)</AdditionalDependencies>
