--- a/RobudeidLib/RobudeidLib.vcxproj.filters
+++ b/RobudeidLib/RobudeidLib.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\Sensor.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="src\GSensor.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BDetector.h">
@@ -60,6 +63,9 @@
       <Filter>標頭檔</Filter>
     </ClInclude>
     <ClInclude Include="src\types.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GSensor.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
